# cmake_template

./: CMakeLists.txt  README.md  bootstrap.sh  build.sh  install.sh
doc/: doxygen.cfg
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.hpp
